--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-scripts": "5.0.1",
     "react-webcam": "^7.2.0",
